--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 p, li {
   color: #444;
-  font-size: 14px;
+  font-size: 17px;
 }
 
 /* Barra de navegação */
@@ -51,5 +51,57 @@ header, .navbar {
   border-bottom: 3px solid #FFF;
 }
 
+.navbar-toggler{
+  margin-right: 15px;
+}
+
 /* Slider */
 
+.container-fluid {
+  padding: 0;
+}
+
+#mainSlider .carousel-inner, #mainSlider .carousel-item {
+  height: 90vh;
+}
+
+#mainSlider .carousel-caption {
+  top: 30%;
+}
+
+#mainSlider .carousel-caption h2 {
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+
+#mainSlider .carousel-caption p {
+  font-size: 22px;
+  font-weight: 300;
+  margin-bottom: 100px;
+  color: #FFF;
+}
+
+.main-btn {
+  background-color: #65DAF9;
+  color: #FFF;
+  text-transform: uppercase;
+  width: 200px;
+  height: 60px;
+  padding: 10px 20px;
+  border-radius: 30px;
+  border: 3px solid transparent;
+  transition: .5s;
+  text-decoration: none;
+}
+
+.main-btn:hover {
+  color: #FFF;
+  background-color: transparent;
+  border-color: #3EC1D5;
+}
+
+.carousel-indicators .active {
+  background-color: #65DAF9;
+}
+
+/* Sobre a empresa */
