--- a/css/style.css
+++ b/css/style.css
@@ -164,3 +164,20 @@ header, .navbar {
 }
 
 /* Dados */
+.circle-box div {
+  padding: 0 40px;
+}
+
+.progressbar-text {
+  font-weight: bold;
+  font-size: 32px;
+}
+
+#data-area p {
+  color: #FFF;
+  text-align: center;
+  font-size: 26px;
+  margin-top: 20px;
+}
+
+/* Time */
